[gd_scene load_steps=23 format=2]

[ext_resource path="res://minigames/minigame6/resources/fertilizer.png" type="Texture" id=1]
[ext_resource path="res://minigames/minigame6/resources/pot.png" type="Texture" id=2]
[ext_resource path="res://themes/theme.tres" type="Theme" id=3]
[ext_resource path="res://textures/effects/other/star.png" type="Texture" id=4]
[ext_resource path="res://textures/gui/bg_light.png" type="Texture" id=5]
[ext_resource path="res://minigames/minigame6/resources/water.png" type="Texture" id=6]
[ext_resource path="res://minigames/minigame6/resources/fertilizing.wav" type="AudioStream" id=7]
[ext_resource path="res://minigames/minigame5/resources/spike.png" type="Texture" id=8]
[ext_resource path="res://textures/gui/class_drop_bg.png" type="Texture" id=9]
[ext_resource path="res://prefabs/menu/help_info.tscn" type="PackedScene" id=10]
[ext_resource path="res://minigames/minigame6/resources/watering.wav" type="AudioStream" id=11]
[ext_resource path="res://minigames/minigame6/resources/box.png" type="Texture" id=12]
[ext_resource path="res://minigames/minigame6/resources/garden.gd" type="Script" id=13]
[ext_resource path="res://minigames/minigame6/resources/pot.gd" type="Script" id=14]

[sub_resource type="Animation" id=2]
resource_name = "rotate"
length = 20.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 20 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.508073, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( 8, 16, 8, 13.0667, -8, 13.0667, -8, 16 )

[sub_resource type="AudioStreamRandomPitch" id=7]
audio_stream = ExtResource( 11 )
random_pitch = 1.2

[sub_resource type="AudioStreamRandomPitch" id=8]
audio_stream = ExtResource( 7 )

[sub_resource type="Animation" id=3]
resource_name = "rotate"
length = 20.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 20 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "rotate"
length = 20.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 20 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "rotate"
length = 20.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 20 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="minigame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 13 )

[node name="bg" type="ColorRect" parent="."]
light_mask = 3
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0.305882, 1 )

[node name="table" type="ColorRect" parent="."]
self_modulate = Color( 0.752941, 0.376471, 0, 1 )
light_mask = 3
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -156.0
color = Color( 0.752941, 0.376471, 0, 1 )

[node name="exit" type="Button" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 96.0
margin_bottom = 46.0
text = "menu.exit"
clip_text = true

[node name="plant" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -46.0
margin_right = 60.0
margin_bottom = -16.0
text = "6.act.plant"

[node name="dig_up" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 77.0
margin_top = -46.0
margin_right = 197.0
margin_bottom = -16.0
text = "6.act.remove"
clip_text = true

[node name="fert_up" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -195.0
margin_top = -46.0
margin_right = -75.0
margin_bottom = -16.0
text = "6.act.fert"

[node name="help_info" parent="." instance=ExtResource( 10 )]
margin_left = 112.0
margin_top = 16.0
margin_right = 142.0
margin_bottom = 46.0
info = "6.help"
id = "garden"

[node name="light" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 0, 0.501961 )
light_mask = 3
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="light" type="Light2D" parent="light"]
position = Vector2( 200, 200 )
texture = ExtResource( 5 )
texture_scale = 2.5
range_item_cull_mask = 2
shadow_enabled = true

[node name="pot0" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = 60.0
margin_right = -240.0
margin_bottom = 180.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )
expand = true
stretch_mode = 5
script = ExtResource( 14 )

[node name="glow" type="TextureRect" parent="pot0"]
visible = false
self_modulate = Color( 1, 1, 1, 0.501961 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -256.0
margin_right = 160.0
margin_bottom = 64.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="light" type="TextureRect" parent="pot0/glow"]
self_modulate = Color( 1, 1, 1, 0.25098 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -160.0
margin_right = 160.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 160, 160 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="anim" type="AnimationPlayer" parent="pot0/glow/light"]
autoplay = "rotate"
anims/rotate = SubResource( 2 )

[node name="stars" type="CPUParticles2D" parent="pot0/glow"]
self_modulate = Color( 1, 1, 1, 0.752941 )
position = Vector2( 160, 160 )
z_index = 1
lifetime = 2.0
texture = ExtResource( 4 )
emission_shape = 2
emission_rect_extents = Vector2( 80, 80 )
direction = Vector2( 0, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
angular_velocity = 90.0
scale_amount = 2.0
scale_amount_curve = SubResource( 1 )

[node name="plant" type="TextureRect" parent="pot0"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_top = -128.0
margin_right = 64.0
rect_pivot_offset = Vector2( 64, 128 )
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="water" type="Button" parent="pot0"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -15.0
margin_right = 80.0
margin_bottom = 15.0
text = "Полить"
icon = ExtResource( 6 )
expand_icon = true

[node name="claim" type="Button" parent="pot0"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 25.0
margin_right = 80.0
margin_bottom = 55.0
text = "6.claim"

[node name="watered" type="CPUParticles2D" parent="pot0"]
visible = false
show_behind_parent = true
position = Vector2( 60, 0 )
amount = 4
emission_shape = 2
emission_rect_extents = Vector2( 60, 1 )
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
scale_amount = 4.0
color = Color( 0, 0.27451, 1, 1 )

[node name="occluder" type="LightOccluder2D" parent="pot0"]
position = Vector2( 60, 60 )
scale = Vector2( 3.75, 3.75 )
occluder = SubResource( 6 )

[node name="watering" type="AudioStreamPlayer" parent="pot0"]
stream = SubResource( 7 )
bus = "sfx"

[node name="fertilizing" type="AudioStreamPlayer" parent="pot0"]
stream = SubResource( 8 )
bus = "sfx"

[node name="pot1" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = 60.0
margin_right = -40.0
margin_bottom = 180.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )
expand = true
stretch_mode = 5
script = ExtResource( 14 )
id = "1"

[node name="glow" type="TextureRect" parent="pot1"]
visible = false
self_modulate = Color( 1, 1, 1, 0.501961 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -256.0
margin_right = 160.0
margin_bottom = 64.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="light" type="TextureRect" parent="pot1/glow"]
self_modulate = Color( 1, 1, 1, 0.25098 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -160.0
margin_right = 160.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 160, 160 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="anim" type="AnimationPlayer" parent="pot1/glow/light"]
autoplay = "rotate"
anims/rotate = SubResource( 3 )

[node name="stars" type="CPUParticles2D" parent="pot1/glow"]
self_modulate = Color( 1, 1, 1, 0.752941 )
position = Vector2( 160, 160 )
z_index = 1
lifetime = 2.0
texture = ExtResource( 4 )
emission_shape = 2
emission_rect_extents = Vector2( 80, 80 )
direction = Vector2( 0, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
angular_velocity = 90.0
scale_amount = 2.0
scale_amount_curve = SubResource( 1 )

[node name="plant" type="TextureRect" parent="pot1"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_top = -128.0
margin_right = 64.0
rect_pivot_offset = Vector2( 64, 128 )
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="water" type="Button" parent="pot1"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -15.0
margin_right = 80.0
margin_bottom = 15.0
text = "Полить"
icon = ExtResource( 6 )
expand_icon = true

[node name="claim" type="Button" parent="pot1"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 25.0
margin_right = 80.0
margin_bottom = 55.0
text = "6.claim"

[node name="watered" type="CPUParticles2D" parent="pot1"]
visible = false
show_behind_parent = true
position = Vector2( 60, 0 )
amount = 4
emission_shape = 2
emission_rect_extents = Vector2( 60, 1 )
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
scale_amount = 4.0
color = Color( 0, 0.27451, 1, 1 )

[node name="occluder" type="LightOccluder2D" parent="pot1"]
position = Vector2( 60, 60 )
scale = Vector2( 3.75, 3.75 )
occluder = SubResource( 6 )

[node name="watering" type="AudioStreamPlayer" parent="pot1"]
stream = SubResource( 7 )
bus = "sfx"

[node name="fertilizing" type="AudioStreamPlayer" parent="pot1"]
stream = SubResource( 8 )
bus = "sfx"

[node name="pot2" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = 60.0
margin_right = 160.0
margin_bottom = 180.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )
expand = true
stretch_mode = 5
script = ExtResource( 14 )
id = "2"

[node name="glow" type="TextureRect" parent="pot2"]
visible = false
self_modulate = Color( 1, 1, 1, 0.501961 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -256.0
margin_right = 160.0
margin_bottom = 64.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="light" type="TextureRect" parent="pot2/glow"]
self_modulate = Color( 1, 1, 1, 0.25098 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -160.0
margin_right = 160.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 160, 160 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="anim" type="AnimationPlayer" parent="pot2/glow/light"]
autoplay = "rotate"
anims/rotate = SubResource( 4 )

[node name="stars" type="CPUParticles2D" parent="pot2/glow"]
self_modulate = Color( 1, 1, 1, 0.752941 )
position = Vector2( 160, 160 )
z_index = 1
lifetime = 2.0
texture = ExtResource( 4 )
emission_shape = 2
emission_rect_extents = Vector2( 80, 80 )
direction = Vector2( 0, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
angular_velocity = 90.0
scale_amount = 2.0
scale_amount_curve = SubResource( 1 )

[node name="plant" type="TextureRect" parent="pot2"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_top = -128.0
margin_right = 64.0
rect_pivot_offset = Vector2( 64, 128 )
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="water" type="Button" parent="pot2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -15.0
margin_right = 80.0
margin_bottom = 15.0
text = "Полить"
icon = ExtResource( 6 )
expand_icon = true

[node name="claim" type="Button" parent="pot2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 25.0
margin_right = 80.0
margin_bottom = 55.0
text = "6.claim"

[node name="watered" type="CPUParticles2D" parent="pot2"]
visible = false
show_behind_parent = true
position = Vector2( 60, 0 )
amount = 4
emission_shape = 2
emission_rect_extents = Vector2( 60, 1 )
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
scale_amount = 4.0
color = Color( 0, 0.27451, 1, 1 )

[node name="occluder" type="LightOccluder2D" parent="pot2"]
position = Vector2( 60, 60 )
scale = Vector2( 3.75, 3.75 )
occluder = SubResource( 6 )

[node name="watering" type="AudioStreamPlayer" parent="pot2"]
stream = SubResource( 7 )
bus = "sfx"

[node name="fertilizing" type="AudioStreamPlayer" parent="pot2"]
stream = SubResource( 8 )
bus = "sfx"

[node name="pot3" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 240.0
margin_top = 60.0
margin_right = 360.0
margin_bottom = 180.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )
expand = true
stretch_mode = 5
script = ExtResource( 14 )
id = "3"

[node name="glow" type="TextureRect" parent="pot3"]
visible = false
self_modulate = Color( 1, 1, 1, 0.501961 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -256.0
margin_right = 160.0
margin_bottom = 64.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="light" type="TextureRect" parent="pot3/glow"]
self_modulate = Color( 1, 1, 1, 0.25098 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -160.0
margin_right = 160.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 160, 160 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="anim" type="AnimationPlayer" parent="pot3/glow/light"]
autoplay = "rotate"
anims/rotate = SubResource( 5 )

[node name="stars" type="CPUParticles2D" parent="pot3/glow"]
self_modulate = Color( 1, 1, 1, 0.752941 )
position = Vector2( 160, 160 )
z_index = 1
lifetime = 2.0
texture = ExtResource( 4 )
emission_shape = 2
emission_rect_extents = Vector2( 80, 80 )
direction = Vector2( 0, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
angular_velocity = 90.0
scale_amount = 2.0
scale_amount_curve = SubResource( 1 )

[node name="plant" type="TextureRect" parent="pot3"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_top = -128.0
margin_right = 64.0
rect_pivot_offset = Vector2( 64, 128 )
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="water" type="Button" parent="pot3"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -15.0
margin_right = 80.0
margin_bottom = 15.0
text = "Полить"
icon = ExtResource( 6 )
expand_icon = true

[node name="claim" type="Button" parent="pot3"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 25.0
margin_right = 80.0
margin_bottom = 55.0
text = "6.claim"

[node name="watered" type="CPUParticles2D" parent="pot3"]
visible = false
show_behind_parent = true
position = Vector2( 60, 0 )
amount = 4
emission_shape = 2
emission_rect_extents = Vector2( 60, 1 )
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
scale_amount = 4.0
color = Color( 0, 0.27451, 1, 1 )

[node name="occluder" type="LightOccluder2D" parent="pot3"]
position = Vector2( 60, 60 )
scale = Vector2( 3.75, 3.75 )
occluder = SubResource( 6 )

[node name="watering" type="AudioStreamPlayer" parent="pot3"]
stream = SubResource( 7 )
bus = "sfx"

[node name="fertilizing" type="AudioStreamPlayer" parent="pot3"]
stream = SubResource( 8 )
bus = "sfx"

[node name="box" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -512.0
margin_top = 16.0
margin_right = -272.0
margin_bottom = 56.0
text = "6.buy.cost"
icon = ExtResource( 12 )
expand_icon = true

[node name="water" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -136.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 56.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "999999"
align = 2
valign = 1

[node name="bg" type="ColorRect" parent="water"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="icon" type="TextureRect" parent="water"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="fert" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -240.0
margin_top = 16.0
margin_right = -160.0
margin_bottom = 56.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "99"
align = 2
valign = 1

[node name="bg" type="ColorRect" parent="fert"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="icon" type="TextureRect" parent="fert"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="tip" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -80.0
margin_right = 20.0
margin_bottom = -56.0
grow_horizontal = 2
align = 1
valign = 1

[node name="warn" type="Label" parent="."]
self_modulate = Color( 1, 0, 0, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -92.0
margin_right = 20.0
margin_bottom = -68.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
valign = 1

[node name="base_list_of_plants" type="CanvasLayer" parent="."]

[node name="list_of_plants" type="WindowDialog" parent="base_list_of_plants"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
theme = ExtResource( 3 )
popup_exclusive = true
window_title = "6.plant.select"

[node name="scroll" type="ScrollContainer" parent="base_list_of_plants/list_of_plants"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="grid" type="GridContainer" parent="base_list_of_plants/list_of_plants/scroll"]
margin_right = 400.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 5
custom_constants/hseparation = 5
columns = 3

[node name="base_gift" type="CanvasLayer" parent="."]

[node name="gift" type="AcceptDialog" parent="base_gift"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.5
margin_top = -39.0
margin_right = 156.5
margin_bottom = 39.0
theme = ExtResource( 3 )
popup_exclusive = true
window_title = "6.gift.title"
dialog_text = "6.gift.text"

[node name="base_buy" type="CanvasLayer" parent="."]

[node name="buy" type="ConfirmationDialog" parent="base_buy"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -120.0
margin_right = 240.0
margin_bottom = 120.0
rect_min_size = Vector2( 170, 59.5 )
theme = ExtResource( 3 )
window_title = "6.buying"
dialog_text = "Действительно хочешь купить садовый ящик за 5 кристаллов?
У тебя:"
dialog_autowrap = true

[connection signal="pressed" from="exit" to="." method="exit"]
[connection signal="pressed" from="plant" to="." method="plant_pressed"]
[connection signal="pressed" from="dig_up" to="." method="dig_up_pressed"]
[connection signal="pressed" from="fert_up" to="." method="fert_up_pressed"]
[connection signal="pressed" from="box" to="." method="open_box"]
[connection signal="confirmed" from="base_gift/gift" to="." method="get_box"]
[connection signal="confirmed" from="base_buy/buy" to="." method="buy_box"]
